hw12 works with default handler, but denyied with custom one